--- a/02_javascript_syntax/02_first_javascript_code.html
+++ b/02_javascript_syntax/02_first_javascript_code.html
@@ -10,7 +10,7 @@
   <script language="javascript" type="text/javascript">
     // document.write which writes a string into our HTML document
     document.write("Hello World!");
-    //This code will produce the following result: Hello World!
+    //This code will produce the following result: 
 
 
   </script>
