--- a/12_loop-control/02_loop-control.html
+++ b/12_loop-control/02_loop-control.html
@@ -4,17 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>For In Loop</title>
+  <title>Loop Control</title>
 </head>
 <body>
-  <script type="text/javascript" >
-    
-    var aProperty;
+  <script type="text/javascript">
+    var x = 1;
 
-    for (aProperty in navigator){
-      document.write(aProperty);
+    while (x < 20){
+      if (x == 5){
+        break;
+      };
+      x = x + 1;
+      document.write(x);
       document.write("<br />")
-    };
+    }
   </script>
 </body>
 </html>
