--- a/13_functions/02_define_function.html
+++ b/13_functions/02_define_function.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script language="javascript" type="text/javascript">
+    function sayHello(){
+      document.write("Hello World!");
+    };
+  </script>
   <title>Define a function</title>
 </head>
 <body>
-  <script type="text/javascript">
-    function sayHello() {
-      alert("Hello World!");
-    };
-  </script>
+  <form>
+    <input type="button" onclick="sayHello()" value="Say Hello" />
+  </form>
+  
 </body>
 </html>
