--- a/21_number/04_nan.html
+++ b/21_number/04_nan.html
@@ -9,7 +9,7 @@
       var dateofMonth = 50;
       if(dateofMonth < 1 || dateofMonth > 31){
         dateofMonth = Number.NaN;
-        document.write("Day of month should be between 1 and 31");
+        alert("Day of month should be between 1 and 31");
       }
      
     }
